# fintrack-saas

./: .coderabbit.yaml  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  update-types.js
.agents/rules/: nextjs-api-routes-and-route-handler.md  nextjs-server-action-and-mutation.md  nextjs-state-management-expert.md
.antigravitycli/: e8ae6ae8-edd4-448d-87f2-d6eea83f27d2.json
.gemini/rules/: nextjs-app-router-best-practices.md  nextjs-performance-optimization.md  typescript-design-patterns-expert.md  typescript-strict-mode-and-safety.md  typescript-testing-using-vitest-jest-expert.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  test.yml
.impeccable/: design.json
app/: globals.css  layout.tsx
app/(dashboard)/: page.tsx
backend/document-reader-service/: .env.example  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  test_auth.py
components/: FinanceTracker.tsx
docs/: testing.md
front-end/: pnpm-lock.yaml
frontend/: .env.ci  .env.example  .env.test.local  .eslintrc.json  .gitignore  .lighthouserc.json  .lighthouserc.mobile.json  .npmrc  eslint.config.mjs  lighthouse.json  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  vitest.config.ts  vitest.setup.ts
lib/: database.types.ts
scripts/: seed_user.js  update_test_docs.mjs
supabase/: .gitignore  config.toml
(+356 files in other folders)
